--- a/Changes
+++ b/Changes
@@ -2,6 +2,14 @@ Revision history for Perl extension DBIx-EAV
 
 {{$NEXT}}
 
+    - improved schema deployment, now using a version table
+      - added method 'version_table'
+      - added method 'version_table_is_installed'
+      - added method 'install_version_table'
+      - added method 'version'
+      - added method 'installed_version'
+    - schema->deploy() now abort silently when the current version is already deployed
+
 0.06 2016-06-04T18:35:21Z
 
     - implemented DBIx::EAV::EntityType load() class method
