--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Perl extension DBIx-EAV
 
 {{$NEXT}}
 
+    [ NEW ]
+    * Implemented custom Entity/ResultSet classes
+      - set via entity_namespaces/resultset_namespaces
+      - can now define entities via custom classes instead of register_types()
+
 0.07 2016-07-26T22:36:26Z
 
     - improved schema deployment, now using a version table
